@@ -1,4 +1,5 @@
 0.6.0 - currently working on
+- [#2594] Feature: Use HTML for the thank-you and unregistration e-mails to the attendees
 - [#2643] Feature: Add a list class
 - [#2710] Fix: Character set for the e-mail tests must not be constant
 - [#2661] Change: The front-end user mapper should use the logged-in user's data whenever possible
